name:               word-lattice
version:            0.1.0
synopsis:           Word lattices
description:
    The library implements word lattices.
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.6
copyright:          Copyright (c) 2013 Jakub Waszczuk
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Data, Data Structures
homepage:           https://github.com/kawu/word-lattice
build-type:         Simple

library
    hs-source-dirs: src
    build-depends:
        base                >= 4        && < 5
      , containers          >= 0.5      && < 0.6
      , vector              >= 0.10     && < 0.11

    exposed-modules:
        Data.WordLattice

    -- other-modules:

    ghc-options: -Wall

source-repository head
    type: git
    location: https://github.com/kawu/word-lattice.git
